--- a/core/website/templates/index.html
+++ b/core/website/templates/index.html
@@ -1,121 +1,8 @@
-<!doctype html>
-<html class="no-js" lang="en">
-<head>
-    {% load static %}
-    <title>Moris Multimedia Company Limited</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="author" content="ThemeZaa">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <meta name="description" content="Elevate your online presence with Crafto - a modern, versatile, multipurpose Bootstrap 5 responsive HTML5, SCSS template using highly creative 52+ ready demos.">
-    <!-- favicon icon -->
-    <link rel="shortcut icon" href="{% static 'website/images/favicon.png' %}">
-    <link rel="apple-touch-icon" href="{% static 'website/images/apple-touch-icon-57x57.png' %}">
-    <link rel="apple-touch-icon" sizes="72x72" href="{% static 'website/images/apple-touch-icon-72x72.png' %}">
-    <link rel="apple-touch-icon" sizes="114x114" href="{% static 'website/images/apple-touch-icon-114x114.png' %}">
-    <!-- google fonts preconnect -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- style sheets and font icons -->
-    <link rel="stylesheet" href="{% static 'website/css/vendors.min.css' %}"/>
-    <link rel="stylesheet" href="{% static 'website/css/icon.min.css' %}"/>
-    <link rel="stylesheet" href="{% static 'website/css/style.css' %}"/>      
-    <link rel="stylesheet" href="{% static 'website/css/responsive.css' %}"/>
-    <link rel="stylesheet" href="{% static 'website/demos/finance/finance.css' %}" />
-</head>
-<body data-mobile-nav-style="full-screen-menu" data-mobile-nav-bg-color="#bc8947" class="custom-cursor"> 
-    <!-- start cursor -->
-    <div class="cursor-page-inner">
-        <div class="circle-cursor circle-cursor-inner"></div>
-        <div class="circle-cursor circle-cursor-outer"></div>
-    </div>
-    <!-- end cursor -->
-    <!-- start header -->
-    <header>
-        <!-- start navigation -->
-        <nav class="navbar navbar-expand-lg bg-transparent disable-fixed"> 
-            <div class="container-fluid"> 
-                <div class="col-auto col-lg-2 me-lg-0 me-auto">
-                    <a class="navbar-brand" href="demo-finance.html">
-                        <img src="{% static 'website/images/logo1.png' %}" data-at2x="{% static 'website/images/MORRISE LOGO-06.png' %}" alt="" class="default-logo">
-                        <img src="{% static 'website/images/demo-finance-logo-white.png' %}" data-at2x="{% static 'website/images/demo-finance-logo-white@2x.png' %}" alt="" class="alt-logo">
-                        <img src="{% static 'website/images/demo-finance-logo-black.png' %}" data-at2x="{% static 'website/images/demo-finance-logo-black@2x.png' %}" alt="" class="mobile-logo">
-                    </a>
-                </div>
-                <div class="col-auto col-lg-8 menu-order position-static">
-                    <button class="navbar-toggler float-start" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-expanded="false" aria-controls="navbarNav" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-line"></span>
-                        <span class="navbar-toggler-line"></span>
-                        <span class="navbar-toggler-line"></span>
-                        <span class="navbar-toggler-line"></span>
-                    </button>
-                    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-                        <ul class="navbar-nav alt-font"> 
-                            <li class="nav-item"><a href="demo-finance.html" class="nav-link">Home</a></li>
-                            <li class="nav-item"><a href="demo-finance-about.html" class="nav-link">About</a></li>
-                            <li class="nav-item dropdown simple-dropdown">
-                                <a href="demo-finance-expertise.html" class="nav-link">Expertise</a>
-                                <i class="fa-solid fa-angle-down dropdown-toggle" id="navbarDropdownMenuLink_1" role="button" data-bs-toggle="dropdown" aria-expanded="false"></i>
-                                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink"> 
-                                    <li><a href="demo-finance-expertise-details.html">Finance planning</a></li>
-                                    <li><a href="demo-finance-expertise-details.html">Wealth management</a></li>
-                                    <li><a href="demo-finance-expertise-details.html">Strategic planning</a></li>
-                                    <li><a href="demo-finance-expertise-details.html">Audit assurance</a></li>
-                                </ul>
-                            </li>
-                            <li class="nav-item"><a href="demo-finance-team.html" class="nav-link">Team</a></li>
-                            <li class="nav-item"><a href="demo-finance-pricing.html" class="nav-link">Pricing</a></li>
-                            <li class="nav-item"><a href="demo-finance-news.html" class="nav-link">News</a></li>
-                            <li class="nav-item"><a href="demo-finance-contact.html" class="nav-link">Contact</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-auto col-lg-2 text-end d-none d-sm-flex"> 
-                    <div class="header-icon">
-                        <div class="header-button"><a href="#contact-form" class="btn btn-very-small btn-white btn-box-shadow btn-round-edge left-icon text-transform-none popup-with-form"><i class="feather icon-feather-mail"></i>Free quote</a></div>
-                    </div>
-                    <!-- start contact form -->
-                    <div id="contact-form" class="container p-0 contact-form-style-01 position-relative text-center mfp-hide">
-                        <div class="row g-0">
-                            <div class="col-lg-5 cover-background md-h-600px xs-h-400px" style="background-image:url('https://via.placeholder.com/1082x1082');"></div>
-                            <div class="col-lg-7">
-                                <div class="p-15 lg-p-10 bg-white">
-                                    <span class="mb-10px">Looking for a finance agent?</span>
-                                    <h3 class="d-inline-block alt-font fw-600 text-dark-gray mb-10 ls-minus-1px">How we can help you?</h3>
-                                    <form action="email-templates/contact-form.php" method="post">
-                                        <div class="position-relative form-group mb-20px">
-                                            <span class="form-icon"><i class="bi bi-emoji-smile"></i></span>
-                                            <input type="text" name="name" class="form-control required" placeholder="Enter your name*" />
-                                        </div>
-                                        <div class="position-relative form-group mb-20px">
-                                            <span class="form-icon"><i class="bi bi-envelope"></i></span>
-                                            <input type="email" name="email" class="form-control required" placeholder="Enter your email*" />
-                                        </div>
-                                        <div class="position-relative form-group mb-20px">
-                                            <span class="form-icon"><i class="bi bi-telephone-outbound"></i></span>
-                                            <input type="tel" name="phone" class="form-control" placeholder="Enter your phone" />
-                                        </div>
-                                        <div class="position-relative form-group form-textarea">
-                                            <span class="form-icon"><i class="bi bi-chat-square-dots"></i></span>
-                                            <textarea placeholder="Your message" name="comment" class="form-control" rows="3"></textarea>
-                                            <input type="hidden" name="redirect" value="">
-                                            <button class="btn btn-medium btn-base-color btn-box-shadow btn-round-edge w-100 mt-20px submit" type="submit">Send message</button>
-                                            <div class="form-results mt-20px d-none"></div>
-                                        </div>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- end contact form -->
-                </div>
-            </div>
-        </nav>
-        <!-- end navigation -->
-    </header>
-    <!-- end header -->
-    <!-- start banner slider -->
-    <section class="p-0 bg-dark-gray"> 
+ {% include "header.html" %}
+ {% load static %}
+
+     <!-- start banner slider -->
+     <section class="p-0 bg-dark-gray"> 
         <div class="swiper full-screen md-h-600px sm-h-500px ipad-top-space-margin swiper-light-pagination swiper-pagination-style-3 magic-cursor drag-cursor" data-slider-options='{ "slidesPerView": 1, "loop": true, "pagination": { "el": ".swiper-pagination-bullets", "clickable": true }, "navigation": { "nextEl": ".slider-one-slide-next-1", "prevEl": ".slider-one-slide-prev-1" }, "autoplay": { "delay": 4000, "stopOnLastSlide": true, "disableOnInteraction": false },"keyboard": { "enabled": true, "onlyInViewport": true }, "effect": "fade" }'>
             <div class="swiper-wrapper">
                 <!-- start slider item -->
@@ -578,71 +465,5 @@
     </section>
     <!-- end section --> 
     <!-- start footer -->
-    <footer class="footer-light bg-very-light-gray"> 
-        <div class="container">
-            <div class="row justify-content-center mb-5 xs-mb-20px">
-                <div class="col-md-12 col-sm-10 text-center">
-                    <h4 class="alt-font text-dark-gray fw-500 ls-minus-1px">Looking for business opportunity? <a href="mailto:info@yourdomain.com" class="text-base-color fw-500 text-decoration-line-bottom-medium">Send message</a></h4>
-                </div>
-            </div>
-            <div class="row justify-content-center">
-                <!-- start footer column -->
-                <div class="col-lg-3 col-md-12 col-sm-6 order-4 order-lg-1 order-md-4 order-sm-3 md-mt-35px text-center text-sm-start text-md-center text-lg-start last-paragraph-no-margin">
-                    <a href="demo-finance.html" class="footer-logo mb-25px sm-mb-20px d-inline-block"><img src="{% static 'website/images/demo-finance-logo-black.png' %}" data-at2x="{% static 'website/images/demo-finance-logo-black@2x.png' %}" alt=""></a>
-                    <p class="mb-15px">We are trusted by more than 5000 very happy clients for finance services.</p>
-                    <p>&COPY; Copyright 2024 <a href="index.html" target="_blank" class="text-decoration-line-bottom text-dark-gray fw-500">Crafto</a></p>
-                </div>
-                <!-- end footer column -->
-                <!-- start footer column -->
-                <div class="col-6 col-xl-2 col-lg-3 col-mw d-4 offset-xl-1 order-1 order-lg-2">
-                    <span class="alt-font fw-500 fs-20 d-block text-dark-gray mb-10px">Company</span>
-                    <ul>
-                        <li><a href="demo-finance-about.html">About company</a></li>
-                        <li><a href="demo-finance-expertise.html">Company expertise</a></li>
-                        <li><a href="demo-finance-team.html">Creative people</a></li>
-                        <li><a href="demo-finance-pricing.html">Pricing plans</a></li>
-                    </ul>
-                </div>
-                <!-- end footer column -->
-                <!-- start footer column -->
-                <div class="col-6 col-xl-2 col-lg-3 col-md-4 order-2 order-lg-3">
-                    <span class="alt-font fw-500 fs-20 d-block text-dark-gray mb-10px">Customer</span>
-                    <ul>                           
-                        <li><a href="demo-finance-expertise.html">Company services</a></li>
-                        <li><a href="demo-finance-about.html">Company story</a></li>
-                        <li><a href="demo-finance-news.html">Latest news</a></li>
-                        <li><a href="demo-finance-contact.html">Contact us</a></li>
-                    </ul>
-                </div>
-                <!-- end footer column -->  
-                <!-- start footer column -->
-                <div class="col-lg-3 col-md-4 col-sm-6 offset-xl-1 order-3 order-lg-4 order-md-3 order-sm-4 sm-mt-35px xs-mt-25px text-center text-sm-start">
-                    <span class="alt-font fw-500 fs-20 d-block text-dark-gray mb-10px">Subscribe newsletter</span>
-                    <p class="mb-30px md-mb-20px sm-mb-15px">Subscribe our newsletter to get the latest news and updates.</p>
-                    <div class="d-inline-block w-100 newsletter-style-02 position-relative">
-                        <form action="email-templates/subscribe-newsletter.php" method="post" class="position-relative w-100">
-                            <input class="bg-white border-color-white w-100 form-control required box-shadow-double-large" type="email" name="email" placeholder="Enter your email">
-                            <input type="hidden" name="redirect" value="">
-                            <button class="btn submit" aria-label="submit"><i class="icon feather icon-feather-mail fs-22 text-base-color"></i></button>
-                            <div class="form-results border-radius-4px pt-5px pb-5px ps-15px pe-15px fs-14 lh-22 mt-10px w-100 text-center position-absolute d-none lh-20"></div>
-                        </form>
-                    </div>
-                </div>
-                <!-- end footer column -->                        
-            </div> 
-        </div> 
-    </footer>
-    <!-- end footer -->
-    <!-- start scroll progress -->
-    <div class="scroll-progress d-none d-xxl-block">
-        <a href="#" class="scroll-top" aria-label="scroll">
-            <span class="scroll-text">Scroll</span><span class="scroll-line"><span class="scroll-point"></span></span>
-        </a>
-    </div>
-    <!-- end scroll progress -->
-    <!-- javascript libraries -->
-    <script type="text/javascript" src="{% static 'website/js/jquery.js' %}"></script>
-    <script type="text/javascript" src="{% static 'website/js/vendors.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'website/js/main.js' %}"></script>
-</body>
-</html>
+  {% include "footer.html" %}
+  
